// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordEntity when not selected renders 1`] = `
<DocumentFragment>
  <button
    class="go113998"
  >
    <span
      class="go1470750214"
    >
      <div
        class="go4131202203"
      >
        <div
          class="go3306043453"
        >
          <span
            class="go3514387725"
          >
            Label
          </span>
           - 
          <strong
            class="go1914257566"
          >
            My EA Account
          </strong>
        </div>
        <div
          class="go3306043453"
        >
          <span
            class="go3514387725"
          >
            Login
          </span>
           - 
          <strong
            class="go1914257566"
          >
            XXX
          </strong>
        </div>
        <div
          class="go3306043453"
        >
          <span
            class="go3514387725"
          >
            Password
          </span>
           - 
          <strong
            class="go1914257566"
          >
            XXX
          </strong>
        </div>
      </div>
      <div
        class="go1569473757"
      />
    </span>
  </button>
</DocumentFragment>
`;

exports[`PasswordEntity when selected renders with additional icon buttons 1`] = `
<DocumentFragment>
  <button
    class="go1778638100"
    isselected="true"
  >
    <span
      class="go1470750214"
    >
      <div
        class="go4131202203"
      >
        <div
          class="go3306043453"
        >
          <span
            class="go3514387725"
          >
            Label
          </span>
           - 
          <strong
            class="go1914257566"
          >
            My EA Account
          </strong>
        </div>
        <div
          class="go3306043453"
        >
          <span
            class="go3514387725"
          >
            Login
          </span>
           - 
          <strong
            class="go1914257566"
          >
            XXX
          </strong>
        </div>
        <div
          class="go3306043453"
        >
          <span
            class="go3514387725"
          >
            Password
          </span>
           - 
          <strong
            class="go1914257566"
          >
            XXX
          </strong>
        </div>
      </div>
      <div
        class="go1569473757"
      />
    </span>
  </button>
  <button
    class="go3135434547 go3618827259"
  >
    <span
      class="go4062099715"
    >
      <img
        alt="icon"
        class="go115679"
        height="30"
        src="static-asset-stub"
        width="30"
      />
    </span>
  </button>
  <button
    class="go3135434547 go3618827259"
  >
    <span
      class="go4062099715"
    >
      <img
        alt="icon"
        class="go115679"
        height="30"
        src="static-asset-stub"
        width="30"
      />
    </span>
  </button>
</DocumentFragment>
`;

exports[`PasswordEntity when selected when bin icon button has been clicked renders prompt 1`] = `
<DocumentFragment>
  <button
    class="go1778638100"
    isselected="true"
  >
    <span
      class="go1470750214"
    >
      <div
        class="go4131202203"
      >
        <div
          class="go3306043453"
        >
          <span
            class="go3514387725"
          >
            Label
          </span>
           - 
          <strong
            class="go1914257566"
          >
            My EA Account
          </strong>
        </div>
        <div
          class="go3306043453"
        >
          <span
            class="go3514387725"
          >
            Login
          </span>
           - 
          <strong
            class="go1914257566"
          >
            XXX
          </strong>
        </div>
        <div
          class="go3306043453"
        >
          <span
            class="go3514387725"
          >
            Password
          </span>
           - 
          <strong
            class="go1914257566"
          >
            XXX
          </strong>
        </div>
      </div>
      <div
        class="go1569473757"
      />
    </span>
  </button>
  <button
    class="go3135434547 go3618827259"
  >
    <span
      class="go4062099715"
    >
      <img
        alt="icon"
        class="go115679"
        height="30"
        src="static-asset-stub"
        width="30"
      />
    </span>
  </button>
  <button
    class="go3135434547 go3618827259"
  >
    <span
      class="go4062099715"
    >
      <img
        alt="icon"
        class="go115679"
        height="30"
        src="static-asset-stub"
        width="30"
      />
    </span>
  </button>
  <section
    class="go939053875"
  >
    <div
      class="go579113919"
    >
      <form>
        <div
          class="go4083855640"
        >
          <section
            class="go3154290440"
          >
            <div
              class="go720639114"
            >
              Enter your encryption key:
            </div>
            <div
              class="go3253370986"
            >
              <input
                class="go3854179087"
                name="encryptionKey"
                placeholder="e.g. MyStrongPassword1234"
                type="password"
              />
            </div>
          </section>
        </div>
      </form>
    </div>
    <div
      class="go444860531"
    >
      <button
        class="go3135434547"
        type="button"
      >
        <span
          class="go4062099715"
        >
          Cancel
        </span>
      </button>
      <button
        class="go3135434547"
        disabled=""
        type="button"
      >
        <span
          class="go4062099715"
        >
          Remove
        </span>
      </button>
    </div>
  </section>
</DocumentFragment>
`;

exports[`PasswordEntity when selected when eye icon button has been clicked renders prompt 1`] = `
<DocumentFragment>
  <button
    class="go1778638100"
    isselected="true"
  >
    <span
      class="go1470750214"
    >
      <div
        class="go4131202203"
      >
        <div
          class="go3306043453"
        >
          <span
            class="go3514387725"
          >
            Label
          </span>
           - 
          <strong
            class="go1914257566"
          >
            My EA Account
          </strong>
        </div>
        <div
          class="go3306043453"
        >
          <span
            class="go3514387725"
          >
            Login
          </span>
           - 
          <strong
            class="go1914257566"
          >
            XXX
          </strong>
        </div>
        <div
          class="go3306043453"
        >
          <span
            class="go3514387725"
          >
            Password
          </span>
           - 
          <strong
            class="go1914257566"
          >
            XXX
          </strong>
        </div>
      </div>
      <div
        class="go1569473757"
      />
    </span>
  </button>
  <button
    class="go3135434547 go3618827259"
  >
    <span
      class="go4062099715"
    >
      <img
        alt="icon"
        class="go115679"
        height="30"
        src="static-asset-stub"
        width="30"
      />
    </span>
  </button>
  <button
    class="go3135434547 go3618827259"
  >
    <span
      class="go4062099715"
    >
      <img
        alt="icon"
        class="go115679"
        height="30"
        src="static-asset-stub"
        width="30"
      />
    </span>
  </button>
  <section
    class="go939053875"
  >
    <div
      class="go579113919"
    >
      <form>
        <div
          class="go4083855640"
        >
          <section
            class="go3154290440"
          >
            <div
              class="go720639114"
            >
              Enter your encryption key:
            </div>
            <div
              class="go3253370986"
            >
              <input
                class="go3854179087"
                name="encryptionKey"
                placeholder="e.g. MyStrongPassword1234"
                type="password"
              />
            </div>
          </section>
        </div>
      </form>
    </div>
    <div
      class="go444860531"
    >
      <button
        class="go3135434547"
        type="button"
      >
        <span
          class="go4062099715"
        >
          Cancel
        </span>
      </button>
      <button
        class="go3135434547"
        disabled=""
        type="button"
      >
        <span
          class="go4062099715"
        >
          Decrypt
        </span>
      </button>
    </div>
  </section>
</DocumentFragment>
`;
